## Makefile.am for DirectFB/gfxdrivers

if GFX_ATI
ATI_DIR = ati128
else
ATI_DIR =
endif

if GFX_RADEON
RADEON_DIR = radeon
else
RADEON_DIR =
endif

if GFX_MACH64
MACH64_DIR = mach64
else
MACH64_DIR =
endif

if GFX_MATROX
MATROX_DIR = matrox
else
MATROX_DIR =
endif

if GFX_TDFX
TDFX_DIR = tdfx
else
TDFX_DIR =
endif

if GFX_NVIDIA
NVIDIA_DIR = nvidia
else
NVIDIA_DIR =
endif

if GFX_NEOMAGIC
NEOMAGIC_DIR = neomagic
else
NEOMAGIC_DIR =
endif

if GFX_NSC
GEODE_DIR = nsc
else
GEODE_DIR =
endif

if GFX_SAVAGE
SAVAGE_DIR = savage
else
SAVAGE_DIR =
endif

if GFX_SIS315
SIS315_DIR = sis315
else
SIS315_DIR =
endif

if GFX_CYBER5K
CYBER5K_DIR = cyber5k
else
CYBER5K_DIR =
endif

if GFX_I810
I810_DIR = i810
else
I810_DIR =
endif

if GFX_I830
I830_DIR = i830
else
I830_DIR =
endif

if GFX_CLE266
CLE266_DIR = cle266
else
CLE266_DIR =
endif

if GFX_UNICHROME
UNICHROME_DIR = unichrome
else
UNICHROME_DIR =
endif

if GFX_R200
R200_DIR = r200
else
R200_DIR =
endif

SUBDIRS = \
	$(ATI_DIR)	\
	$(RADEON_DIR)	\
	$(CYBER5K_DIR)	\
	$(MACH64_DIR)	\
	$(MATROX_DIR)	\
	$(TDFX_DIR)	\
	$(NVIDIA_DIR)	\
	$(NEOMAGIC_DIR)	\
	$(SAVAGE_DIR)	\
	$(SIS315_DIR)	\
	$(I810_DIR)	\
	$(I830_DIR)	\
	$(CLE266_DIR)	\
	$(UNICHROME_DIR) \
	$(GEODE_DIR)	\
	$(R200_DIR)

