## Makefile.am for DirectFB/gfxdrivers

if GFX_ATI128
ATI128_DIR = ati128
else
ATI128_DIR =
endif

if GFX_CLE266
CLE266_DIR = cle266
else
CLE266_DIR =
endif

if GFX_CYBER5K
CYBER5K_DIR = cyber5k
else
CYBER5K_DIR =
endif

if GFX_DAVINCI
DAVINCI_DIR = davinci
else
DAVINCI_DIR =
endif

if GFX_GP2D
GP2D_DIR = gp2d
else
GP2D_DIR =
endif

if GFX_GL
GL_DIR = gl
else
GL_DIR =
endif

if GFX_GLES2
GLES2_DIR = gles2
else
GLES2_DIR =
endif

if GFX_I810
I810_DIR = i810
else
I810_DIR =
endif

if GFX_I830
I830_DIR = i830
else
I830_DIR =
endif

if GFX_MACH64
MACH64_DIR = mach64
else
MACH64_DIR =
endif

if GFX_MATROX
MATROX_DIR = matrox
else
MATROX_DIR =
endif

if GFX_NEOMAGIC
NEOMAGIC_DIR = neomagic
else
NEOMAGIC_DIR =
endif

if GFX_NSC
NSC_DIR = nsc
else
NSC_DIR =
endif

if GFX_NVIDIA
NVIDIA_DIR = nvidia
else
NVIDIA_DIR =
endif

if GFX_OMAP
OMAP_DIR = omap
else
OMAP_DIR =
endif

if GFX_PVR2D
PVR2D_DIR = pvr2d
else
PVR2D_DIR =
endif

if GFX_PXA3XX
PXA3XX_DIR = pxa3xx
else
PXA3XX_DIR =
endif

if GFX_RADEON
RADEON_DIR = radeon
else
RADEON_DIR =
endif

if GFX_SAVAGE
SAVAGE_DIR = savage
else
SAVAGE_DIR =
endif

if GFX_SH772X
SH772X_DIR = sh772x
else
SH772X_DIR =
endif

if GFX_SIS315
SIS315_DIR = sis315
else
SIS315_DIR =
endif

if GFX_TDFX
TDFX_DIR = tdfx
else
TDFX_DIR =
endif

if GFX_UNICHROME
UNICHROME_DIR = unichrome
else
UNICHROME_DIR =
endif

if GFX_VDPAU
VDPAU_DIR = vdpau
else
VDPAU_DIR =
endif

if GFX_VMWARE
VMWARE_DIR = vmware
else
VMWARE_DIR =
endif

if GFX_EP9X
EP9X_DIR = ep9x
else
EP9X_DIR =
endif


SUBDIRS = \
	$(ATI128_DIR)	\
	$(CLE266_DIR)	\
	$(CYBER5K_DIR)	\
	$(DAVINCI_DIR)	\
	$(EP9X_DIR)	\
	$(GP2D_DIR)	\
	$(GL_DIR)	\
	$(GLES2_DIR)	\
	$(I810_DIR)	\
	$(I830_DIR)	\
	$(MACH64_DIR)	\
	$(MATROX_DIR)	\
	$(NEOMAGIC_DIR)	\
	$(NSC_DIR)	\
	$(NVIDIA_DIR)	\
	$(OMAP_DIR)	\
	$(PVR2D_DIR)	\
	$(PXA3XX_DIR)	\
	$(RADEON_DIR)	\
	$(SAVAGE_DIR)	\
	$(SH772X_DIR)	\
	$(SIS315_DIR)	\
	$(TDFX_DIR)	\
	$(UNICHROME_DIR) \
	$(VDPAU_DIR)	\
	$(VMWARE_DIR)
