## Makefile.am for DirectFB/interfaces

if ENABLE_FUSIONSOUND
FUSIONSOUND_DIRS =	IFusionSound \
			IFusionSoundMusicProvider
endif

SUBDIRS = \
	ICoreResourceManager	\
	IDirectFBFont		\
	IDirectFBGL		\
	IDirectFBImageProvider	\
	IDirectFBVideoProvider	\
	IDirectFBWindows	\
	IWater			\
	$(FUSIONSOUND_DIRS)
