## Makefile.am for DirectFB/patches

EXTRA_DIST = \
	README.fusion					\
	README.matroxfb-vsync-irq-patch			\
	README.savagefb					\
	fusion-full-linux-2.4.16.patch.bz2		\
	fusion-full-linux-2.4.20.patch.bz2		\
	fusion-full-linux-2.4.21-pre7.patch.bz2		\
	fusion-full-linux-2.5.66.patch.bz2		\
	matroxfb-full-memory-linux-2.4.21-rc2.patch.bz2	\
	matroxfb-vsync-c2vline-irq-patch-2.4.19.bz2	\
	savagefb-0.3.2-linux-2.4.19-pre7.patch.bz2	\
	savagefb-0.4.0-linux-2.4.19.patch.bz2		\
	savagefb-0.4.0-linux-2.4.21-rc2.patch.bz2	\
	vmwarefb-0.6.0-linux-2.4.18.patch.bz2		\
	vmwarefb-0.6.0-linux-2.4.20.patch.bz2
