## Makefile.am for DirectFB/patches

EXTRA_DIST = \
	README.davincifb				\
	README.fusion					\
	README.matroxfb-vsync-irq-patch			\
	README.savagefb					\
	davincifb-triple-osd0-2.6.10.patch.bz2		\
	matroxfb-full-memory-linux-2.4.21-rc2.patch.bz2	\
	matroxfb-g400-clock-2.4.22.patch.bz2		\
	matroxfb-vsync-irq-2.4.20.patch.bz2		\
	matroxfb-vsync-irq-2.4.21-pre6.patch.bz2	\
	savagefb-0.3.2-linux-2.4.26.patch.bz2		\
	savagefb-0.4.0-linux-2.4.19.patch.bz2		\
	savagefb-0.4.0-linux-2.4.21-rc2.patch.bz2	\
	vmwarefb-0.7.0-linux-2.4.22.patch.bz2
